welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: Boolean does not take parameters
  while (!fonctionTest()) {
                      ^SnakeBuggle:14: error: value Ouest is not a member of object plm.universe.Direction
      if (getDirection() == Direction.Ouest){
                                      ^